--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-        <title>Showcase | plugmedia</title>
+        <title>Showcase | plugmedia - learn about how our digital and creative work can work for you.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -91,7 +91,7 @@
 				</div>
 				<div class="column half">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						A collection of our different ​digital media and marketing endeavours helps you see the spectrum of our experience and what we can offer you company in achieving its digital objectives.
 					</p>
 				</div>
 			</div>
@@ -106,7 +106,7 @@
 							</button>
 						</a>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							It starts with an idea and a digital reality is born. 
 						</p>
 					</div>
 					<div class="column half">
@@ -118,7 +118,7 @@
 							</button>
 						</a>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Turning your vision into reality is our passion.
 						</p>
 					</div>
 				</div>
