--- a/app/about.html
+++ b/app/about.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>About Us | plugmedia</title>
+        <title>About Us | plugmedia - what we do for you and who does it.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -67,10 +67,14 @@
         <header class="fixed about-header">
             <!--<img class="header-img"src="images/digitaldepot.jpg" alt=""> -->
         </header>
+        <header class="fixed about-header">
+            <div class="about-header-bg"></div>
+        </header>
         <div class="about-header-text fixed text-center">
             <h1>
-                About Us
+                about us
             </h1>
+            <p>- who we are -</p>
         </div>
         <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-about">
@@ -102,11 +106,7 @@
                 </div>
                 <div class="column half">
                     <p>
-                        Our community of digital creators work in creative association, supporting and learning from each other by sharing their knowledge and connections. We provide a space that allows each one to flourish and grow on every project.
-                    </p>
-                    <br />
-                    <p>
-                        Our clients needs are always looked at through this together thinking model, analysing how we can reduce their costs and make their business more effective.
+                        Bringing together our team of multidisciplinary experts, with combined experience of over 100 years, we can deliver the best possible digital media and marketing solutions for your company. With each project we have developed our understanding of digital, marketing and data needs for businesses in the present economy. Looked at as a whole, this means that we can provided fully integrated and tailored solutions, working within your resources to deliver solutions best suited to your business needs and ambitions.
                     </p>
                 </div>
                 <div class="column full">
@@ -192,6 +192,13 @@
                     </div>
                 </div>
             </div>
+            <div class="clearfix team-intro">
+                <div class="column full">
+                    <p>
+                        Our community of digital creators work in creative association. supporting and learning from each other by sharing their knowledge and connections. we provide a space that allows each one to flourish and grow on every project.
+                    </p>
+                </div>
+            </div>
             <div class="in-house-team">
                 <div class="clearfix">
                     <div class="column full text-center">
@@ -224,7 +231,7 @@
                                                 Sam Lyons - Founder/Creative Director
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -272,7 +279,7 @@
                                                 Marie Therese - Project Manager/Content Editor
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -320,7 +327,7 @@
                                                 Artur Leitis - Programmer/Developer
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -368,7 +375,7 @@
                                                 Philip Corbally - Developer
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -432,7 +439,7 @@
                                                 André Lacerda - Motion Graphics/Video
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -480,7 +487,7 @@
                                                 Robert Kamenicky - Web Developer/Designer
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -528,7 +535,7 @@
                                                 Aidan McCarthy - Broadcast Video Editor
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -722,7 +729,7 @@
                                                 Juliana Scodeler - Photographer
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
@@ -767,7 +774,7 @@
                                                 Jaroslaw Narkiewicz - Graphic/Web Designer
                                             </h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, beatae, ad voluptate cupiditate asperiores aliquid quis sequi a expedita doloribus labore accusamus sapiente eos veritatis rem aperiam officiis inventore voluptates porro harum consectetur adipisci perspiciatis repudiandae laborum et in voluptatem!
+                                                Coming soon!
                                             </p>
                                         </div>
                                     </div>
