--- a/app/connect.html
+++ b/app/connect.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-        <title>Connect | plugmedia</title>
+        <title>Connect | plugmedia - get in contact with our company to find your digital solution.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
