--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>plugmedia</title>
+        <title>plugmedia - a digital media and marketing agency with 20 years experience in Ireland.</title>
         <meta name="description" content="">
         <meta name="robots" content="noodp">
         <meta name="viewport" content="width=device-width">
@@ -167,10 +167,10 @@
                 <div class="clearfix block-swarm-tactics">
                     <div class="column full text-center v-align">
                         <div class="title-and-text v-aligned">
-                            <h3>SWARM TACTICS &amp; TOGETHER THINKING</h3>
+                            <h3>THINKING DIGITAL? THEN THINK OF US.</h3>
                             <hr />
                             <p>
-                                We look at the potential advantages of collaboration with each project for greater efficiency and effectiveness.
+                                Plugmedia has the experience and team to create the solution that will bring your business to the next level.
                             </p>
                             <a href="about.html">
                                 <button>
@@ -183,9 +183,11 @@
                 <div class="clearfix block-collaboration">
                     <div class="collab-darken"></div>
                     <div class="column full text-center v-align">
-                        <div class="text-and-button v-aligned">
+                        <div class="title-and-text v-aligned">
+                            <h3>LEARNING FOR YOU AND WITH YOU</h3>
+                            <hr />
                             <p>
-                                We invest in the development of digital communities and learning programmes that show how technology can be used to improve our lives.
+                                We take time to ensure we stay at the cutting edge of emerging technologies, so you can focus on your business while we take care of all future opportunities.
                             </p>
                             <a href="showcase.html#cs-main">
                                 <button>
@@ -199,10 +201,7 @@
                     <div class="column full text-center v-align">
                         <div class="text-and-button v-aligned">
                             <p>
-                                You are bombarded with hundreds of visual messages every day in varying forms.
-                            </p>
-                            <p>
-                                Our talent is engaging your audience to plug in to <u>your</u> messages.
+                                We specialise in getting your message heard in a crowded marketplace.
                             </p>
                             <a href="services.html">
                                 <button>
