--- a/app/services.html
+++ b/app/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-        <title>Services | plugmedia</title>
+        <title>Services | plugmedia - all of your digital objectives and goals can be met.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -86,7 +86,7 @@
             <div class="clearfix block-services-tagline">
                 <div class="column full text-center v-align">
                     <div class="v-aligned">
-                        <p>Services are awesome!</p>
+                        <p>​Our passion is to serve through technology, creativity​ and education.</p>
                     </div>
                 </div>
             </div>
