--- a/app/about.html
+++ b/app/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>About Us | plugmedia - what we do for you and who does it.</title>
-        <meta name="description" content="">
+        <meta name="description" content="About Us - find out about who we are, why we do what we do and how our experience in the digital media and marketing industry can help your company meet its IT and marketing goals. ">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -46,7 +46,7 @@
                         <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
-                        <a href="/blog">BLOG</a>
+                        <a href="blog.html">BLOG</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="index.html">
@@ -150,7 +150,7 @@
                             Our values
                         </h2>
                         <p>
-                            - something here -
+                            - important to us -
                         </p>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                             Team
                         </h2>
                         <p>
-                            - something here -
+                            - our people -
                         </p>
                     </div>
                 </div>
@@ -851,7 +851,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-948221-3');ga('send','pageview');
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
