--- a/app/blog.html
+++ b/app/blog.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-        <title>Connect | plugmedia - get in contact with our company to find your digital solution.</title>
-        <meta name="description" content="Connect - now its up to you to get in contact with plugmedia by phone, email or in person. Remember to follow us on our social media channels for valuable and rich content that helps you keep abreast of the changing technological landscape . ">
+        <title>Blog | plugmedia - observations and discoveries for you in design, technology, marketing and data analysis.</title>
+        <meta name="description" content="Blog - keeping up to date with emerging technologies is our speciality and we are happy to share these retrospections with you.">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -42,10 +42,10 @@
                 <li>
                     <a href="showcase.html">SHOWCASE</a>
                 </li>
-                <li class="nav-active">
+                <li>
                     <a href="connect.html">CONNECT</a>
                 </li>
-                <li>
+                <li class="nav-active">
                     <a href="blog.html">BLOG</a>
                 </li>
             </ul>
@@ -64,17 +64,17 @@
         <!-- End navbar -->
 
         <!-- Header -->
-        <header class="fixed connect-header">
-            <div class="connect-header-bg"></div>
+        <header class="fixed blog-header">
+            <div class="blog-header-bg"></div>
         </header>
-        <div class="connect-header-text fixed text-center">
+        <div class="blog-header-text fixed text-center">
             <h1>
-                connect
+                blog
             </h1>
-            <p>- get in touch -</p>
+            <p>- stay up to date -</p>
         </div>
         <div class="header-spacer"></div>
-        <div class="scroll-down" id="scroll-down-connect">
+        <div class="scroll-down" id="scroll-down-blog">
             <div class="semi-circle"></div>
             <div class="chevron">
                 <i class="fa fa-angle-down"></i>
@@ -82,74 +82,10 @@
         </div>
         <!-- End header -->
         
-        <!--
-        <div class="clearfix block-blog">
-            <div class="column full text-center v-align">
-                <div class="text-and-button v-aligned">
-                    <p>
-                        Stay up to date
-                    </p>
-                    <a href="/blog">
-                        <button>
-                            Read our blog <i class="fa fa-long-arrow-right"></i>
-                        </button>
-                    </a>
-                </div>
-            </div>
-        </div>  
-        --> 
-
-        <section class="contact">          
-            <form class="contact-form" method="post" action="connect.php">
-                <div class="contact-form-column">
-                    <label for="first_name">First Name</label>
-                    <input type="text" id="first_name" name="first_name" placeholder="Jonathan" required>
-                    <label for="last_name">Last Name</label>
-                    <input type="text" id="last_name" name="last_name" placeholder="Doe" required>
-                    <label for="company_name">Company Name</label>
-                    <input type="text" id="company_name" name="company_name" placeholder="JD Enterprises" required>
-                    <label for="email">Email Address</label>
-                    <input type="text" id="email" name="email" placeholder="jon@doe.com" required>
-                </div>
-                <div class="contact-form-column">
-                    <label for="phone">Phone Number</label>
-                    <input type="text" id="phone" name="phone" placeholder="087 1234567">
-                    <label for="subject">Subject</label>
-                    <select id="subject" name="subject">
-                        <option>Training</option>
-                        <option>Design</option>
-                        <option>Consulting</option>
-                        <option>Marketing</option>
-                        <option>Analysis</option>
-                    </select>
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <div class="contact-form-submit-wrap">
-                    <input class="contact-form-submit" type="submit" value="Submit" />
-                </div>
-            </form>
-        </section>
-
-        <section class="social-media">
-            <div class="clearfix">
-                <div class="column full text-center">
-                    <p>You can also find us here:</p>
-                </div>
-                <div class="column full text-center">
-                    <a href="//www.facebook.com/PlugMedia.net" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a href="//www.twitter.com/plugmedia_net" target="_blank"><i class="fa fa-twitter"></i></a>
-                    <a href="//plus.google.com/111339119107453629909/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
-                    <a href="//www.linkedin.com/company/1253986" target="_blank"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-        </section>
-
-        <section class="map text-center">
-            <p>And here:</p>
-            <div class="google-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.948672129954!2d-6.283371999999965!3d53.344174999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c3aa7371b2b%3A0xfcd991cf75874ad2!2splugMEDIA.net!5e0!3m2!1sen!2sie!4v1402496085847" width="1000" height="400" frameborder="0" style="border:0" scrollwheel=false></iframe>
-            </div>
+        <section class="blog">
+            <h2>
+                Coming Soon
+            </h2>
         </section>
         
         <footer>
