--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>plugmedia - a digital media and marketing agency with 20 years experience in Ireland.</title>
-        <meta name="description" content="">
+        <meta name="description" content="Homepage - plugmedia is a digital media and marketing agency based in Dublin, Ireland. We excel in finding digital and creative solutions to that enable your company to meet its strategic business objectives online and offline.">
         <meta name="robots" content="noodp">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -47,7 +47,7 @@
                         <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
-                        <a href="/blog">BLOG</a>
+                        <a href="blog.html">BLOG</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="/">
@@ -109,38 +109,49 @@
                 </div>
                 <div class="clearfix">
                     <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
-                        <p>Asking questions &amp; listening</p>
+                        <p>We get clear on your brief</p>
                     </div>
                     <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
-                        <i class="fa fa-comments"></i>
+                        <img src="images/brief.png" alt="">
                     </div>
                 </div>
                 <div class="clearfix">
                     <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
-                        <p>Drawing up a plan</p>
+                        <p>Design an outline plan</p>
                     </div>
                     <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
-                        <i class="fa fa-folder-open"></i>
+                        <img src="images/plan.png" alt="">
                     </div>
                 </div>
                 <div class="clearfix">
                     <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
-                        <p>Engaging the team</p>
+                        <p>Show you how to communicate</p>
                     </div>
                     <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
-                        <i class="fa fa-users"></i>
+                        <img src="images/communicate.png" alt="">
                     </div>
                 </div>
                 <div class="clearfix">
                     <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
-                        <p>Initiation &amp; monitoring</p>
+                        <p>Engage the teams</p>
                     </div>
                     <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
-                        <i class="fa fa-thumbs-up"></i>
+                        <img src="images/team.png" alt="">
                     </div>
                 </div>
+                <div class="clearfix">
+                    <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
+                        <p>Initiate &amp; guide actions</p>
+                    </div>
+                    <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
+                        <img src="images/monitoring.png" alt="">
+                    </div>
+                </div>
+
+                
+               
             </section>
-            <div class="clearfix how-do-we">
+            <!--<div class="clearfix how-do-we">
                 <div class="column full">
                     <div class="people-icon text-center v-align">
                         <div class="box">
@@ -150,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <section class="office-img">
                 <div class="column full text-center v-align">
@@ -257,7 +268,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-948221-3');ga('send','pageview');
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
