--- a/app/services.html
+++ b/app/services.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <title>Services | plugmedia - all of your digital objectives and goals can be met.</title>
-        <meta name="description" content="">
+        <meta name="description" content="Services - whether its data analysis, creative designs or marketing strategies, plugmedia can offer your business an integrated solution that will target your customers and leave the competition behind.">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -46,7 +46,7 @@
                         <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
-                        <a href="/blog">BLOG</a>
+                        <a href="blog.html">BLOG</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="/">
@@ -282,7 +282,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-948221-3');ga('send','pageview');
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
