--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <title>Showcase | plugmedia - learn about how our digital and creative work can work for you.</title>
-        <meta name="description" content="">
+        <meta name="description" content="Showcase - meet the clients that approached plugmedia and see the creative solutions that we found for them. Our Case Studies gives you insight into some of the bigger digital media projects our team have the experience and capacity to take on.">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -46,7 +46,7 @@
                         <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
-                        <a href="/blog">BLOG</a>
+                        <a href="blog.html">BLOG</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="/">
@@ -1176,7 +1176,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-948221-3');ga('send','pageview');
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
