--- a/app/blog.html
+++ b/app/blog.html
@@ -10,12 +10,10 @@
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="../bower_components/normalize.css/normalize.css">
-        <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/fonts/fonts.css">
-        <link rel="stylesheet" href="styles/css/main.css">
+        <link rel="stylesheet" href="styles/main.css">
         <!--<link rel="stylesheet" type="text/css" href="styles/css/component.css"/>-->
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
@@ -31,7 +29,7 @@
         <nav class="nav-reduced">
             <ul class="nav">
                 <li>
-                    <a href="/">HOME</a>
+                    <a href="index.html">HOME</a>
                 </li>
                 <li>
                     <a href="about.html">ABOUT</a>
