--- a/app/index.html
+++ b/app/index.html
@@ -9,17 +9,15 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/vendor.css -->
+        <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
         <!-- bower:css -->
-        <link rel="stylesheet" href="../bower_components/normalize.css/normalize.css">
-        <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/fonts/fonts.css">
-        <link rel="stylesheet" href="styles/css/main.css">
+        <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
-        <script src="../bower_components/modernizr/modernizr.js"></script>
+        <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
 
     </head>
@@ -32,7 +30,7 @@
             <nav class="nav-full-height">
                 <ul class="nav">
                     <li class="nav-active">
-                        <a href="/">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
                         <a href="about.html">ABOUT</a>
@@ -262,14 +260,14 @@
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!--<script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-948221-3');ga('send','pageview');
-        </script>
+        </script>-->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/footerreveal.js"></script>
