--- a/app/index.html
+++ b/app/index.html
@@ -248,14 +248,14 @@
                 </div>
             </div>
         </footer>
-
+        
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="../bower_components/jquery/dist/jquery.js"></script>
-        <script src="../bower_components/jquery-waypoints/waypoints.min.js"></script>
-        <script src="../bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
-        <script src="../bower_components/skrollr/dist/skrollr.min.js"></script>
+        <script src="bower_components/jquery-waypoints/waypoints.min.js"></script>
+        <script src="bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
+        <script src="bower_components/skrollr/dist/skrollr.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -271,6 +271,8 @@
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/footerreveal.js"></script>
+        <script src="scripts/jquery.superslides.min.js"></script>
+        <script src="scripts/boxlayout.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
