--- a/app/about.html
+++ b/app/about.html
@@ -819,6 +819,9 @@
                 </div>
             </div>
         </div>
+
+        <div class="lightbox-background"></div>
+
         <footer>
             <div class="clearfix">
                 <div class="column full">
