nailed flickering info panel bug in safari

--- a/app/blog.html
+++ b/app/blog.html
@@ -62,16 +62,16 @@
         <!-- End navbar -->
 
         <!-- Header -->
-        <header class="fixed blog-header">
-            <div class="blog-header-bg"></div>
-        </header>
-        <div class="blog-header-text fixed text-center">
+        <header class="blog-header">
+            <!--<div class="blog-header-bg"></div>-->
+            <div class="blog-header-text text-center">
             <h1>
                 blog
             </h1>
             <p>- stay up to date -</p>
         </div>
-        <div class="header-spacer"></div>
+        </header>
+        <!--<div class="header-spacer"></div>-->
         <div class="scroll-down" id="scroll-down-blog">
             <div class="semi-circle"></div>
             <div class="chevron">
