added second tagline

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
                 <div class="home-header-text">
                     <h1>plugmedia</h1>
                     <p class="tagline">The Power of Together</p>
+                    <p class="sub-tagline">Dublin's Digital Media &amp; Marketing Agency</p>
                 </div>
             </div>
             <div class="plug-and-socket">
