fixed alignment of text on flickery homepage block

--- a/app/index.html
+++ b/app/index.html
@@ -163,8 +163,8 @@
             </div>-->
 
             <section class="office-img">
-                <div class="column full text-center v-align">
-                    <div class="text-and-button v-aligned">
+                <div class="column full text-center">
+                    <div class="text-and-button">
                         <p>
                             Transform your vision into a business reality
                         </p>
