changed viewport meta tag

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <title>Showcase | plugmedia - learn about how our digital and creative work can work for you.</title>
         <meta name="description" content="Showcase - meet the clients that approached plugmedia and see the creative solutions that we found for them. Our Case Studies gives you insight into some of the bigger digital media projects our team have the experience and capacity to take on.">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
