--- a/app/about.html
+++ b/app/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>About Us | plugmedia - what we do for you and who does it.</title>
         <meta name="description" content="About Us - find out about who we are, why we do what we do and how our experience in the digital media and marketing industry can help your company meet its IT and marketing goals. ">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
