--- a/app/blog.html
+++ b/app/blog.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <title>Blog | plugmedia - observations and discoveries for you in design, technology, marketing and data analysis.</title>
         <meta name="description" content="Blog - keeping up to date with emerging technologies is our speciality and we are happy to share these retrospections with you.">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
