--- a/app/connect.html
+++ b/app/connect.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <title>Connect | plugmedia - get in contact with our company to find your digital solution.</title>
         <meta name="description" content="Connect - now its up to you to get in contact with plugmedia by phone, email or in person. Remember to follow us on our social media channels for valuable and rich content that helps you keep abreast of the changing technological landscape . ">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
