--- a/app/services.html
+++ b/app/services.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <title>Services | plugmedia - all of your digital objectives and goals can be met.</title>
         <meta name="description" content="Services - whether its data analysis, creative designs or marketing strategies, plugmedia can offer your business an integrated solution that will target your customers and leave the competition behind.">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
