--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <title>plugmedia - a digital media and marketing agency with 20 years experience in Ireland.</title>
         <meta name="description" content="Homepage - plugmedia is a digital media and marketing agency based in Dublin, Ireland. We excel in finding digital and creative solutions to that enable your company to meet its strategic business objectives online and offline.">
         <meta name="robots" content="noodp">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
