--- a/app/about.html
+++ b/app/about.html
@@ -78,9 +78,6 @@
 
         <!-- Header -->
         <header class="fixed about-header">
-            <!--<img class="header-img"src="images/digitaldepot.jpg" alt=""> -->
-        </header>
-        <header class="fixed about-header">
             <div class="about-header-bg"></div>
         </header>
         <div class="about-header-text fixed text-center">
@@ -858,6 +855,7 @@
         <script src="bower_components/jquery-waypoints/waypoints.min.js"></script>
         <script src="bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
         <script src="bower_components/skrollr/dist/skrollr.min.js"></script>
+        <script src="bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
