--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,7 @@
         <script src="bower_components/jquery-waypoints/waypoints.min.js"></script>
         <script src="bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
         <script src="bower_components/skrollr/dist/skrollr.min.js"></script>
+        <script src="bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
