--- a/app/blog.html
+++ b/app/blog.html
@@ -77,16 +77,16 @@
         <!-- End navbar -->
 
         <!-- Header -->
-        <header class="blog-header">
-            <!--<div class="blog-header-bg"></div>-->
-            <div class="blog-header-text text-center">
+        <header class="blog-header fixed">
+            <div class="blog-header-bg"></div>
+            <div class="blog-header-text fixed text-center">
             <h1>
                 blog
             </h1>
             <p>- stay up to date -</p>
         </div>
         </header>
-        <!--<div class="header-spacer"></div>-->
+        <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-blog">
             <div class="semi-circle"></div>
             <div class="chevron">
