--- a/app/about.html
+++ b/app/about.html
@@ -59,7 +59,7 @@
                         <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
-                        <a href="blog.html">BLOG</a>
+                        <a href="blog">BLOG</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="index.html">
